[package]
name = "kprobetcp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.1"
aya-log-ebpf = "0.1.1"
kprobetcp-common = { path = "../kprobetcp-common" }

[build-dependencies]
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }

[[bin]]
name = "kprobetcp"
path = "src/main.rs"
