[package]
name = "lsm-nice-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.1"
aya-log-ebpf = "0.1.1"
lsm-nice-common = { path = "../lsm-nice-common" }

[build-dependencies]
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }

[[bin]]
name = "lsm-nice"
path = "src/main.rs"
